test/files/neg/t8754/Test_2.scala
object Test {
  def test(b: B[String]) = b.peer.getModel // ArrayIndexOutBoundsException in AsSeenFrom::correspondingTypeArg
}
